moving things around. Build now needs Hadoop 2.8+