@@ -39,6 +39,7 @@
 
   <modules>
     <module>cloud-examples</module>
+    <module>cloud-committer</module>
   </modules>
 
   <properties>
@@ -79,7 +80,7 @@
     <central.repo>https://repo1.maven.org/maven2</central.repo>
     <!-- earlier versions of the SPARK-7481 patch had it as spark-cloud.JAR; this
     variable makes it possible to run these tests against that version. -->
-    <spark.cloud.module.name>hadoop-cloud</spark.cloud.module.name>
+    <spark.cloud.module.name>spark-hadoop-cloud</spark.cloud.module.name>
     <spark.cloud.module.type>jar</spark.cloud.module.type>
     <committer>${unset}</committer>
 
@@ -106,6 +107,34 @@
     <!-- if this flag is set, the code assumes that s3guard is being used and
     then loads _SUCCESS as JSON-->
     <fs.s3a.s3guard.committer.test.enabled>false</fs.s3a.s3guard.committer.test.enabled>
+
+
+    <!-- plugins -->
+    <!-- platform encoding override -->
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+    <!-- maven plugin versions -->
+    <maven-deploy-plugin.version>2.8.1</maven-deploy-plugin.version>
+    <maven-site-plugin.version>3.6</maven-site-plugin.version>
+    <maven-stylus-skin.version>1.5</maven-stylus-skin.version>
+    <maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
+    <maven-assembly-plugin.version>2.4</maven-assembly-plugin.version>
+    <maven-dependency-plugin.version>2.10</maven-dependency-plugin.version>
+    <maven-enforcer-plugin.version>1.4.1</maven-enforcer-plugin.version>
+    <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
+    <maven-gpg-plugin.version>1.5</maven-gpg-plugin.version>
+    <maven-remote-resources-plugin.version>1.5</maven-remote-resources-plugin.version>
+    <maven-resources-plugin.version>3.0.1</maven-resources-plugin.version>
+    <apache-rat-plugin.version>0.10</apache-rat-plugin.version>
+    <wagon-ssh.version>1.0</wagon-ssh.version>
+    <maven-clover2-plugin.version>3.3.0</maven-clover2-plugin.version>
+    <maven-bundle-plugin.version>2.5.0</maven-bundle-plugin.version>
+    <lifecycle-mapping.version>1.0.0</lifecycle-mapping.version>
+    <maven-checkstyle-plugin.version>2.17</maven-checkstyle-plugin.version>
+    <checkstyle.version>7.5.1</checkstyle.version>
+    <dependency-check-maven.version>1.4.3</dependency-check-maven.version>
+
 
   </properties>
 
@@ -215,6 +244,196 @@
     </dependencies>
   </dependencyManagement>
 
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>${maven-dependency-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-enforcer-plugin</artifactId>
+          <version>${maven-enforcer-plugin.version}</version>
+          <configuration>
+            <rules>
+              <requireMavenVersion>
+                <version>[3.3.0,)</version>
+              </requireMavenVersion>
+              <requireJavaVersion>
+                <version>[1.8,)</version>
+              </requireJavaVersion>
+            </rules>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-assembly-plugin</artifactId>
+          <version>${maven-assembly-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>${maven-site-plugin.version}</version>
+          <dependencies>
+            <dependency><!-- add support for ssh/scp -->
+              <groupId>org.apache.maven.wagon</groupId>
+              <artifactId>wagon-ssh</artifactId>
+              <version>${wagon-ssh.version}</version>
+            </dependency>
+          </dependencies>
+          <configuration>
+            <dependencyLocationsEnabled>false</dependencyLocationsEnabled>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-project-info-reports-plugin</artifactId>
+          <version>2.9</version>
+        </plugin>
+        <plugin>
+          <groupId>net.alchim31.maven</groupId>
+          <artifactId>scala-maven-plugin</artifactId>
+          <version>${alchim.scala-maven-plugin.version}</version>
+          <executions>
+            <execution>
+              <id>eclipse-add-source</id>
+              <goals>
+                <goal>add-source</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>scala-compile-first</id>
+              <phase>process-resources</phase>
+              <goals>
+                <goal>compile</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>scala-test-compile-first</id>
+              <phase>process-test-resources</phase>
+              <goals>
+                <goal>testCompile</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>attach-scaladocs</id>
+              <phase>verify</phase>
+              <goals>
+                <goal>doc-jar</goal>
+              </goals>
+            </execution>
+          </executions>
+
+          <configuration>
+            <scalaVersion>${scala.version}</scalaVersion>
+            <recompileMode>incremental</recompileMode>
+            <useZincServer>true</useZincServer>
+            <args>
+              <arg>-unchecked</arg>
+              <arg>-deprecation</arg>
+              <arg>-feature</arg>
+            </args>
+            <jvmArgs>
+              <jvmArg>-Xms1024m</jvmArg>
+              <jvmArg>-Xmx1024m</jvmArg>
+              <!--
+                          <jvmArg>-XX:PermSize=${PermGen}</jvmArg>
+                          <jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>
+                          <jvmArg>-XX:ReservedCodeCacheSize=${CodeCacheSize}</jvmArg>
+              -->
+            </jvmArgs>
+            <javacArgs>
+              <javacArg>-source</javacArg>
+              <javacArg>${java.version}</javacArg>
+              <javacArg>-target</javacArg>
+              <javacArg>${java.version}</javacArg>
+              <javacArg>-Xlint:all,-serial,-path</javacArg>
+            </javacArgs>
+          </configuration>
+        </plugin>
+
+        <!-- Enable surefire and scalatest in all children, in one place: -->
+        <!-- keep maven-failsafe-plugin version in sync -->
+        <!-- Surefire runs all Java tests -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
+          <!-- Note config is repeated in scalatest config -->
+          <configuration>
+            <skipTests>true</skipTests>
+            <includes>
+              <include>**/Test*.java</include>
+              <include>**/*Test.java</include>
+              <include>**/*TestCase.java</include>
+              <include>**/*Suite.java</include>
+            </includes>
+            <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+
+            <systemProperties>
+              <java.awt.headless>true</java.awt.headless>
+              <java.io.tmpdir>${project.build.directory}/tmp</java.io.tmpdir>
+              <spark.ui.enabled>false</spark.ui.enabled>
+              <spark.ui.showConsoleProgress>false</spark.ui.showConsoleProgress>
+              <spark.unsafe.exceptionOnMemoryLeak>true</spark.unsafe.exceptionOnMemoryLeak>
+            </systemProperties>
+            <failIfNoTests>false</failIfNoTests>
+          </configuration>
+        </plugin>
+
+
+        <!-- Scalatest runs all Scala tests -->
+        <plugin>
+          <groupId>org.scalatest</groupId>
+          <artifactId>scalatest-maven-plugin</artifactId>
+          <version>${scalatest-maven-plugin.version}</version>
+          <!-- Note config is repeated in surefire config -->
+          <configuration>
+            <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+            <junitxml>.</junitxml>
+            <filereports>SparkTestSuite.txt</filereports>
+            <argLine>-ea</argLine>
+            <stderr/>
+            <environmentVariables>
+            </environmentVariables>
+            <systemProperties>
+              <!--<log4j.configuration>file:src/test/resources/log4j.properties</log4j.configuration>-->
+              <log4j.debug>${log4j.debug}</log4j.debug>
+              <java.awt.headless>true</java.awt.headless>
+              <java.io.tmpdir>${project.build.directory}/tmp</java.io.tmpdir>
+              <test.build.data>${test.build.data}</test.build.data>
+              <test.build.dir>${test.build.dir}</test.build.dir>
+              <hadoop.tmp.dir>${hadoop.tmp.dir}</hadoop.tmp.dir>
+              <spark.testing>1</spark.testing>
+              <spark.ui.enabled>false</spark.ui.enabled>
+              <spark.ui.showConsoleProgress>false</spark.ui.showConsoleProgress>
+              <spark.unsafe.exceptionOnMemoryLeak>true</spark.unsafe.exceptionOnMemoryLeak>
+              <cloud.test.configuration.file>${cloud.test.configuration.file}</cloud.test.configuration.file>
+              <cloud.test.committer>${committer}</cloud.test.committer>
+              <required.hadoop.version>${required.hadoop.version}</required.hadoop.version>
+            </systemProperties>
+
+          </configuration>
+          <executions>
+            <execution>
+              <id>test</id>
+              <goals>
+                <goal>test</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
   <profiles>
     <!--
  This is a profile to enable the use of the ASF snapshot and staging repositories
@@ -302,13 +521,6 @@
       </properties>
     </profile>
 -->
-
-    <profile>
-      <id>hadoop-2.7</id>
-      <properties>
-        <required.hadoop.version>2.7.3</required.hadoop.version>
-      </properties>
-    </profile>
 
     <profile>
       <id>hadoop-2.8</id>
